fix translation text too long, breaking design bug for default theme

--- a/skin/frontend/default/default/css/boxes.css
+++ b/skin/frontend/default/default/css/boxes.css
@@ -725,7 +725,7 @@ h1#logo {
 .generic-product-grid td.last { border-right:0; }
 .generic-product-grid .product-image { text-align:center; }
 .generic-product-grid td.empty-product{ border-right:0; background:#f5f6f6; }
-
+.catalog-listing .product-cell-wrapper { width:135px; overflow:hidden; }
 
 /********************** Layered Navigation */
 .layered-nav .head {
